@@ -1,5 +1,10 @@
 2008-11-26  Sebastien Merle  <sebastien@fluendo.com>
 
+	* flumotion/component/consumers/httpstreamer/resources.py:
+	Fixed a bug when no plug are specified.
+
+2008-11-26  Sebastien Merle  <sebastien@fluendo.com>
+
 	* flumotion/component/plugs/requestmodifier.py:
 	* flumotion/component/plugs/requestmodifier.py (added):
 	Added the new plug module forgoten in the last commit.
